# weather_temperature

./: README.md  cities.json  config.ini  data.db  db.py  functions.py  pyproject.toml  test_weather.py  weather_api.py  weather_report.py
